--- a/publiccms-parent/publiccms/src/main/resources/language/operate.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/operate.properties
@@ -120,6 +120,8 @@ operate.delete.cmsDictionary=\u5220\u9664\u6570\u636E\u5B57\u5178
 operate.save.cmsDictionary=\u521B\u5EFA\u6570\u636E\u5B57\u5178
 operate.update.cmsDictionary=\u66F4\u65B0\u6570\u636E\u5B57\u5178
 operate.delete.web.webfile=\u5220\u9664\u7F51\u7AD9\u6587\u4EF6
+operate.save.web.webfile=\u521B\u5EFA\u7F51\u7AD9\u6587\u4EF6
+operate.update.web.webfile=\u4FEE\u6539\u7F51\u7AD9\u6587\u4EF6
 operate.zip.web.webfile=\u538B\u7F29\u7F51\u7AD9\u6587\u4EF6
 operate.unzip.web.webfile=\u89E3\u538B\u7F51\u7AD9\u6587\u4EF6
 operate.createDirectory.web.webfile=\u521B\u5EFA\u7F51\u7AD9\u6587\u4EF6\u76EE\u5F55
