--- a/publiccms-parent/publiccms/src/main/resources/language/message_en.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/message_en.properties
@@ -36,12 +36,12 @@ verify.user.notAdmin=Not an administrator
 verify.user.notEnablie=User has been disabled
 verify.custom.static=Generate static page failed
 verify.custom.noright=No permissions
-verify.custom.needAuthorizationEdition=\u9700\u8981\u6388\u6743\u6587\u4EF6
-verify.custom.unauthorizedDomain=\u57DF\u540D\u7ECF\u8FC7\u672A\u6388\u6743
+verify.custom.needAuthorizationEdition=Requires authorization file
+verify.custom.unauthorizedDomain=The domain name is not authorized
 verify.custom.notExist.template=Template does not exist
 verify.custom.contribute=Do not allow frontside submission
-verify.custom.manage=\u4E0D\u5141\u8BB8\u524D\u53F0\u7EF4\u62A4
-verify.custom.notExist.webfile=\u7F51\u7AD9\u6587\u4EF6\u4E0D\u5B58\u5728
+verify.custom.manage=No front desk maintenance is allowed
+verify.custom.notExist.webfile=Website file does not exist
 
 status.content.0=Draft
 status.content.1=Published
