增加语言切换

--- a/publiccms-parent/publiccms/src/main/resources/language/message_en.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/message_en.properties
@@ -64,6 +64,7 @@ message.sendEmail.error=Your mailbox is incorrect or the system mail service is 
 message.timeout=Session times out, please login again.
 message.error=Error
 message.done=Operation was successful
+message.doneAndRefresh=Operation was successful and the page will be refreshed
 message.needReLogin=Password modified successfully, please login again!
 message.unauthorizedUrl=No permission to do this
 message.content.categoryModel.empty=The model {0} has a mapping relationship with the column {1} mapping
