--- a/publiccms-parent/publiccms/src/main/resources/language/message.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/message.properties
@@ -64,6 +64,7 @@ message.sendEmail.error=\u60A8\u7684\u90AE\u7BB1\u6709\u8BEF\u6216\u7cfb\u7edf\u
 message.timeout=\u4f1a\u8bdd\u8d85\u65f6\uff0c\u8bf7\u91cd\u65b0\u767B\u5F55\u3002
 message.error=\u9519\u8BEF
 message.done=\u64cd\u4f5c\u6210\u529f
+message.doneAndRefresh=\u64cd\u4f5c\u6210\u529f\u5E76\u4E14\u9875\u9762\u5C06\u88AB\u5237\u65B0
 message.needReLogin=\u5bc6\u7801\u4fee\u6539\u6210\u529f\uff0c\u8bf7\u91cd\u65b0\u767B\u5F55\uff01
 message.unauthorizedUrl=\u6CA1\u6709\u6743\u9650\u8FDB\u884C\u8BE5\u64CD\u4F5C
 message.content.categoryModel.empty=\u5185\u5BB9{0}\u7684\u6A21\u578B\u4E0E\u680F\u76EE{1}\u6620\u5C04\u5173\u7CFB\u4E0D\u5B58\u5728
