https://github.com/sanluan/PublicCMS-preview/issues/5 [Typo] | moudle to module

--- a/publiccms-parent/publiccms/src/main/resources/language/operate.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/operate.properties
@@ -58,9 +58,9 @@ operate.delete.dept=\u5220\u9664\u90E8\u95E8
 operate.save.dept=\u521B\u5EFA\u90E8\u95E8
 operate.update.dept=\u66F4\u65B0\u90E8\u95E8
 operate.delete.usertoken=\u5220\u9664\u7528\u6237\u6388\u6743
-operate.delete.moudle=\u5220\u9664\u6A21\u5757
-operate.save.moudle=\u521B\u5EFA\u6A21\u5757
-operate.update.moudle=\u66F4\u65B0\u6A21\u5757
+operate.delete.module=\u5220\u9664\u6A21\u5757
+operate.save.module=\u521B\u5EFA\u6A21\u5757
+operate.update.module=\u66F4\u65B0\u6A21\u5757
 operate.delete.domain=\u5220\u9664\u57DF\u540D
 operate.save.domain=\u521B\u5EFA\u57DF\u540D
 operate.update.domain=\u66F4\u65B0\u57DF\u540D
