--- a/publiccms-parent/publiccms/src/main/resources/language/operate_en.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/operate_en.properties
@@ -58,9 +58,9 @@ operate.delete.dept=Delete the department
 operate.save.dept=Create the department
 operate.update.dept=Modify the department
 operate.delete.usertoken=Delete the user token
-operate.delete.moudle=Delete the module
-operate.save.moudle=Create the module
-operate.update.moudle=Modify the module
+operate.delete.module=Delete the module
+operate.save.module=Create the module
+operate.update.module=Modify the module
 operate.delete.domain=Delete domain name
 operate.save.domain=Create domain name
 operate.update.domain=Modify domain name
