--- a/publiccms-parent/publiccms/src/main/resources/language/operate.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/operate.properties
@@ -35,6 +35,8 @@ operate.run.task.template=\u6267\u884C\u4EFB\u52A1\u8BA1\u5212\u811A\u672C
 operate.update.template.meta=\u4FEE\u6539\u6A21\u677F\u5143\u6570\u636E
 operate.update.template.data=\u4FEE\u6539\u9875\u9762\u6570\u636E
 operate.clear.pageCache=\u6E05\u7406\u9875\u9762\u7F13\u5B58
+operate.save.place.template=\u521B\u5EFA\u9875\u9762\u7247\u6BB5
+operate.update.place.template=\u4FEE\u6539\u9875\u9762\u7247\u6BB5
 operate.clear.place=\u6E05\u7A7A\u63A8\u8350\u4F4D\u6570\u636E
 operate.delete.place=\u5220\u9664\u63A8\u8350\u4F4D\u6570\u636E
 operate.save.place=\u521B\u5EFA\u63A8\u8350\u4F4D\u6570\u636E
