--- a/publiccms-parent/publiccms/src/main/resources/language/operate_en.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/operate_en.properties
@@ -35,6 +35,8 @@ operate.run.task.template=Modify Scheduling shell
 operate.update.template.meta=Modify template metadata
 operate.update.template.data=Modify the page data
 operate.clear.pageCache=Clear page cache
+operate.save.place.template=Create the page fragment
+operate.update.place.template=Modify the page fragment
 operate.clear.place=Empty the recommend data
 operate.delete.place=Delete recommend data
 operate.save.place=Create recommend data
