--- a/publiccms-parent/publiccms/src/main/resources/language/operate_en.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/operate_en.properties
@@ -87,6 +87,7 @@ operate.update.app=Modify the application
 operate.save.app=Create the application
 operate.enable.appclient=Enable the client
 operate.disable.appclient=Disable the client
+operate.delete.apptoken=Delete the application token
 operate.delete.config=Delete the configuration
 operate.update.config=Modify the configuration
 operate.save.config=Add configuration
