推荐页面 增加删除功能 列表选中样式调整

--- a/publiccms-parent/publiccms/src/main/resources/language/operate.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/operate.properties
@@ -17,6 +17,7 @@ operate.check.content=\u5BA1\u6838\u5185\u5BB9
 operate.uncheck.content=\u64A4\u9500\u5BA1\u6838\u5185\u5BB9
 operate.refresh.content=\u5237\u65B0\u5185\u5BB9
 operate.related.content=\u63A8\u8350\u5185\u5BB9
+operate.unrelated.content=\u53D6\u6D88\u63A8\u8350\u5185\u5BB9
 operate.recycle.content=\u8FD8\u539F\u5185\u5BB9
 operate.sort.content=\u7F6E\u9876\u5185\u5BB9
 operate.realDelete.content=\u5F7B\u5E95\u5220\u9664\u5185\u5BB9
