--- a/publiccms-parent/publiccms/src/main/resources/language/operate_en.properties
+++ b/publiccms-parent/publiccms/src/main/resources/language/operate_en.properties
@@ -17,6 +17,7 @@ operate.check.content=Check content
 operate.uncheck.content=Uncheck content
 operate.refresh.content=Refresh the content
 operate.related.content=Related content
+operate.unrelated.content=Unrelated content
 operate.recycle.content=Recycle content
 operate.sort.content=Sort content
 operate.realDelete.content=Completely delete the content
